Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/model/trees/BrokenEnumConstructor.out
BrokenEnumConstructor.java:16:30: compiler.err.call.to.super.not.allowed.in.enum.ctor: BrokenEnumConstructor
1 error
